--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,11 +1,9 @@
 %article.video_category
 	%header
-		%h3= link_to "Category"
-		- @videos.in_groups_of 6 do |group| 
+		- @categories.each do |category| 
 			.videos.row
 			%br
-			- group.each do |video|
-				- unless video.nil?
-					.video.col-sm-2
-						=link_to "", nil do
-							%img(src="#{video.small_cover_url}")
+			%h3= link_to category.name.titleize, "/categories/#{category.id}"
+			- category.six_random_videos.each do |video| 
+				.video.col-sm-2
+					= link_to image_tag(video.small_cover_url), video_path(video.id)
