--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -6,9 +6,10 @@
     %li= link_to "My Queue"
     %li= link_to "People"
   %form.col-md-5.navbar-form(action="")
-    .form-group
-      %input.form-control(type="text" placeholder="Search for videos here")
-    %button.btn.btn-default(type="submit") Search
+  .form-group
+  = form_tag search_videos_path, class: 'span5 for-search', method: 'get' do
+    %input.form-control(name="search_term" type="text" placeholder="Search for videos here")
+    = submit_tag "Search", name: nil, class: "btn btn-default"
   #user_links.pull-right
     %ul
       %li.dropdown
