--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -4,6 +4,6 @@
 			.videos.row
 			%br
 			%h3= link_to category.name.titleize, "/categories/#{category.id}"
-			- category.six_random_videos.each do |video| 
+			- category.recent_videos.each do |video| 
 				.video.col-sm-2
 					= link_to image_tag(video.small_cover_url), video_path(video.id)
