--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,34 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%section.register.container
+  .row
+    .col-sm-10.col-sm-offset-1
+      = bootstrap_form_for(@user, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-6") do |f|
+        %header
+          %h1 Register
+        %fieldset
+          .form-group
+            = f.email_field :email, label: "Email Address"
+          .form-group
+            = f.password_field :password, label: "Password"
+          .form-group
+            = f.password_field :password_confirmation, label: "Confirm Password"
+          .form-group
+            = f.text_field :name, label: "Full Name"
+        %fieldset.credit_card
+          .form-group
+            %label.control-label.col-sm-3 Credit Card Number
+            .col-sm-6
+              %input.form-control(type="text")
+          .form-group
+            %label.control-label.col-sm-3 Security Code
+            .col-sm-6
+              %input.form-control(type="text")
+          .form-group
+            %label.control-label.col-sm-3 Expiration
+            .col-sm-3
+              = select_month(Date.today, {add_month_numbers: true},  class: 'form-control')
+            .col-sm-2
+              = select_year(Date.today.year, {start_year: Date.today.year, end_year: Date.today.year + 4}, class: 'form-control')
+        %fieldset.actions.control-group.col-sm-offset-2
+          .controls
+            = f.submit "Sign Up"
+            
