--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,23 +1,28 @@
-%section#top-header.row
-  %h1.col-md-2
-    = link_to "MyFLiX"
-  %ul.col-md-4.clearfix
-    %li= link_to "Videos"
-    %li= link_to "My Queue"
-    %li= link_to "People"
-  %form.col-md-5.navbar-form(action="")
-  .form-group
-  = form_tag search_videos_path, class: 'span5 for-search', method: 'get' do
-    %input.form-control(name="search_term" type="text" placeholder="Search for videos here")
-    = submit_tag "Search", name: nil, class: "btn btn-default"
-  #user_links.pull-right
-    %ul
-      %li.dropdown
-        %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
-          Welcome, Philip J. Fry
-          %b.caret
-        %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
-          %li
-            %a(href="#") Account
-            %a(href="#") Plan and Billing
-            %a(href="#") Sign Out
+- if logged_in?
+  %section#top-header.row
+    %h1.col-md-1
+      = link_to "MyFLiX", home_path
+    %ul.col-md-4.clearfix
+      %li= link_to "Videos"
+      %li= link_to "My Queue"
+      %li= link_to "People"
+    %form.col-md-5.navbar-form(action="")
+    .form-group
+    = form_tag search_videos_path, class: 'span5 for-search', method: 'get' do
+      %input.form-control(name="search_term" type="text" placeholder="Search for videos here")
+      = submit_tag "Search", name: nil, class: "btn btn-default"
+    #user_links.pull-right
+      %ul
+        %li.dropdown
+          %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
+            Welcome, #{current_user.name} 
+            %b.caret
+          %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
+            %li
+              %a(href="#") Account
+              %a(href="#") Plan and Billing
+              = link_to "Sign out", logout_path
+- else
+  %section#top-header.row
+    %h1.col-md-2
+      = link_to "MyFLiX", root_path
