Add controller tests for users, sessions, videos

--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,7 +1,7 @@
 %article.video
   .container
     .row
-      .video_large_cover.col-sm-7.col-sm-offset-1
+      .video_large_cover.col-sm-8
         %img(src="#{@video.large_cover_url}")
       .video_info.col-sm-3
         %header
