--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,7 @@
     %h1.col-md-1
       = link_to "MyFLiX", home_path
     %ul.col-md-4.clearfix
-      %li= link_to "Videos"
+      %li= link_to "Videos", home_path
       %li= link_to "My Queue", my_queue_path
       %li= link_to "People"
     %form.col-md-5.navbar-form(action="")
