--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -36,6 +36,7 @@
             %li.row
               .col-sm-2
                 %span Rating: #{review.rating}
-                %p by <a href="">#{review.user.name}</a>
+                %p by 
+                = link_to review.user.name, review.user
               .col-sm-8
                 %p= review.content
