--- a/app/views/app_mailer/send_invitation_email.html.haml
+++ b/app/views/app_mailer/send_invitation_email.html.haml
@@ -2,5 +2,7 @@
 %html(lang="en-US")
   %body
     %p You are invited by #{ @invitation.inviter.name } to join MyFlix!
-    %p= @invitation.message 
-    %p= link_to "Accept this invitation", '#'
+    %p
+    = @invitation.message 
+    %p
+    = link_to "Accept this invitation",register_with_token_url(@invitation.token)
