--- a/app/views/invitations/new.html.haml
+++ b/app/views/invitations/new.html.haml
@@ -1,24 +1,12 @@
 %section.invite.container
   .row
     .col-sm-10.col-sm-offset-1
-      = form_for @invitation, class: "invite" do |f|
+      = bootstrap_form_for @invitation, class: "invite" do |f|
         %header
           %h1 Invite a friend to join MyFlix!
         %fieldset
-          .form-group
-            = f.label :recipient_name, "Friend's Name"
-            .row
-              .col-sm-4
-                = f.text_field :recipient_name
-          .form-group
-            = f.label :recipient_email, "Friend's Email Address"
-            .row
-              .col-sm-4
-                = f.text_field :recipient_email
-          .form-group
-            = f.label :message, "Invitation Message"
-            .row
-              .col-sm-6
-                = f.textarea :message, placeholder: "Please join this really cool site!", class: "form-control(rows=6)"
+          = f.text_field :recipient_name, label: "Friend's Name"
+          = f.text_field :recipient_email, label: "Friend's Email Address"
+          = f.text_area :message, placeholder: "Please join this really cool site!", class: "form-control(rows=6)", label: "Message"
         %fieldset.form-group.action
           %input(type="submit" value="Send Invitation" class="btn btn-default")
