--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -2,7 +2,7 @@
   .container
     .row
       .col-md-10.col-md-offset-1
-        = bootstrap_form_for [:admin, @video], html: { class: 'form-horizontal' } do |f|
+      = bootstrap_form_for [:admin, @video], layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-6" do |f|
         %form.form-horizontal
           %ul.nav.nav-tabs
             %li
@@ -14,16 +14,8 @@
             = f.text_field :title, class: 'col-sm-3'
             = f.select :category_id, options_for_select(Category.all.map{ |category| [category.name, category.id]})
             = f.text_area :description, rows: 8, class: "col-sm-6"  
-            .form-group
-              %label.control-label.col-sm-3 Large Cover
-              .col-sm-6
-                %col.btn.btn-file
-                  %input.form-control(type="file")
-            .form-group
-              %label.control-label.col-sm-3 Small Cover
-              .col-sm-6
-                %col.btn.btn-file
-                  %input.form-control(type="file")
+            = f.file_field :large_cover, class: "btn btn-default btn-file"
+            = f.file_field :small_cover, class: "btn btn-default btn-file" 
 
           %fieldset.actions.form-group
             .col-sm-6.col-md-offset-3
