--- a/app/views/admin/videos/new.html.haml
+++ b/app/views/admin/videos/new.html.haml
@@ -15,7 +15,8 @@
             = f.select :category_id, options_for_select(Category.all.map{ |category| [category.name, category.id]})
             = f.text_area :description, rows: 8, class: "col-sm-6"  
             = f.file_field :large_cover, class: "btn btn-default btn-file"
-            = f.file_field :small_cover, class: "btn btn-default btn-file" 
+            = f.file_field :small_cover, class: "btn btn-default btn-file"
+            = f.text_field :video_url, class: 'col-sm-3', label: "Video URL" 
 
           %fieldset.actions.form-group
             .col-sm-6.col-md-offset-3
