--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -7,7 +7,7 @@
 %section.register.container
   .row
     .col-sm-10.col-sm-offset-1
-      = bootstrap_form_for(@user, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-6", id: "payment-form") do |f|
+      = bootstrap_form_for(@user, layout: :horizontal, label_col: "col-sm-3", control_col: "col-sm-6") do |f|
         %header
           %h1 Register
         %fieldset
