assignments complete, few bugs with testing

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,6 +11,7 @@
         %header
           %h1 Register
         %fieldset
+          = f.alert_message "Please fix the errors below."
           = f.email_field :email, label: "Email Address"
           = f.password_field :password, label: "Password"
           = f.password_field :password_confirmation, label: "Confirm Password"
@@ -19,13 +20,13 @@
         %fieldset.credit_card
           %span.payment-errors
           .form-group
-            %label.control-label.col-sm-3 Credit Card Number
+            %label.control-label.col-sm-3(for="credit-card-number") Credit Card Number
             .col-sm-6
-              %input.form-control(type="text" data-stripe="number")
+              %input.form-control#credit-card-number(type="text" data-stripe="number")
           .form-group
-            %label.control-label.col-sm-3 Security Code
+            %label.control-label.col-sm-3(for="security-code") Security Code
             .col-sm-6
-              %input.form-control(type="text" data-stripe="cvc")
+              %input.form-control#security-code(type="text" data-stripe="cvc")
           .form-group
             %label.control-label.col-sm-3 Expiration
             .col-sm-3
